# opr

./: .gitignore  Cargo.toml  README.md
bubbler/: Cargo.toml
bubbler/src/: bubbler.rs  diffuse_particle.rs  lib.rs  params.rs
common/: Cargo.toml
common/src/: animation.rs  boundaries.rs  constants.rs  discretegrid.rs  emitter.rs  fluid.rs  hashgrid.rs  kernel.rs  lib.rs  mesher.rs  particle.rs  particle_bye.rs  rigid_object.rs  simulation.rs  simulation_snapshot.rs
common/src/external_forces/: basic_viscosity.rs  drag.rs  elasticity.rs  gravity.rs  high_viscosity.rs  mod.rs  surfacetension.rs  vorticity.rs
common/src/kernels/: adhesionkernel.rs  cohesionkernel.rs  cubicspine.rs  mod.rs
common/src/mesh/: bsh.rs  mesh.rs  mod.rs  triangle.rs
common/src/mesher/: anisotropication.rs  constants.rs  interpolation.rs  mesh.rs  mesher.rs  mod.rs  types.rs
common/src/pressure_solver/: dfsph.rs  mod.rs
common/src/search/: aabb.rs  bucket.rs  bvh.rs
common/src/utils/: conjugate_gradient_solver.rs  curves.rs  gausslegendre.rs  mod.rs
data/materials/: blue.mtl  blue_sea.mtl  chocolate.mtl  glass.mtl  green.mtl  green_liquid.mtl  honey.mtl  jade.mtl  metal_ground.mtl  picka.mtl  red.mtl  red_liquid.mtl  silver.mtl  transparent.mtl  transparent_water.mtl  white.mtl  white_box.mtl  white_transparent.mtl
data/objects/boat/: OldBoat.mtl
data/objects/earth/: earth.mtl
data/scenes/: adhesion.yaml  boat.yaml  boat_from_boat.yaml  canardbox.yaml  collisions.yaml  collisions_simple.yaml  dance.yaml  dragon_vs_bunny.yaml  eiffel.yaml  elastic.yaml  elastic_inclined.yaml  emitter.yaml  falling_pikachu.yaml  glass_bubble.yaml  highly_viscous.yaml  honey.yaml  honey_column.yaml  liquid_dragon.yaml  motor.yaml  multiphase_emitter.yaml  simple.yaml  simple_drag.yaml  simple_multiphase.yaml  simple_wind.yaml  simple_with_dragons.yaml  surface_tension.yaml  very_simple.yaml  visquous_dragon.yaml  wave_motor.yaml
data/scenes/raytracer/: debug.yaml
debug_renderer/: Cargo.toml
debug_renderer/src/: lib.rs  particle.rs  scene.rs
image_manipulation/: Cargo.toml
image_manipulation/src/: convmatrix.rs  histogram.rs  image.rs  lib.rs
mesher/: Cargo.toml
mesher/src/: anisotropication.rs  constants.rs  interpolation.rs  mesh.rs  mesher.rs  types.rs
pipeline/: Cargo.toml
pipeline/src/: lib.rs  polygonize.rs  render.rs  simulate.rs  video.rs
raytracer/: Cargo.toml
raytracer/src/: camera.rs  image.rs  lib.rs  light.rs  material.rs  particle.rs  scene.rs  scene_config.rs  shaders.rs
raytracer/src/shapes/: mod.rs  plane.rs  sphere.rs  triangle.rs
render/: Cargo.toml
render/src/: lib.rs  particle.rs  scene.rs
scene/: Cargo.toml
scene/src/: emitters.rs  fluid.rs  lib.rs  liquid.rs  scene.rs  simulation_loader.rs  solid.rs
search/: Cargo.toml
search/src/: aabb.rs  bucket.rs  bvh.rs  hashgrid.rs  lib.rs  ray.rs
sph/: Cargo.toml
sph/src/: animation.rs  camera.rs  emitter.rs  fluid.rs  lib.rs  rigid_object.rs  simulation.rs  simulation_snapshot.rs
sph/src/bubbler/: bubbler.rs  config.rs  diffuse_particle.rs  mod.rs
sph/src/external_forces/: basic_viscosity.rs  drag.rs  elasticity.rs  gravity.rs  high_viscosity.rs  mod.rs  surfacetension.rs  vorticity.rs
sph/src/pressure_solver/: dfsph.rs
src/: 3.rs  _main_preview_mesh.rs  a.rs  cli.yml  extract_grid.rs  main.rs  mymain.rs  pipeline.rs  polygonization.rs  raytrace.rs  render.rs  simulation.rs  viewer.rs
unifobub/: Cargo.toml
utils/: Cargo.toml
utils/src/: curves.rs  discretegrid.rs  lib.rs
utils/src/kernels/: adhesionkernel.rs  mod.rs
utils/src/mesh/: bsh.rs  mesh.rs  mod.rs  tobj.rs  triangle.rs
