[package]
name = "opr"
version = "0.1.0"
authors = ["Audran Doublet <audran@datakeen.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sph_common = { path = "common" }
sph_scene = { path = "scene" }
render = { path = "render" }
rand = "0.7.3"
nalgebra = "0.20.0"
image = "0.23.2"
clap = {version = "~2.33.0", features = ["yaml"]}
