[package]
name = "opr"
version = "0.1.0"
authors = ["Audran Doublet <audran@datakeen.co>"]
edition = "2018"

[dependencies]
sph_common = { path = "common" }
sph_scene = { path = "scene" }
render = { path = "render" }
raytracer = { path = "raytracer" }
pipeline = { path = "pipeline" }
bubbler = { path = "bubbler" }

image = "0.23.2"

# Multithreding
rayon = "1.3.0"

# Maths
nalgebra = "0.20.0"
rand = "0.7.3"

# 3d viewer
kiss3d = "0.23.0"

# CLI
clap = {version = "~2.33.0", features = ["yaml"]}
indicatif = "0.14.0"
