[package]
name = "opr"
version = "0.1.0"
authors = ["Audran Doublet <audran@datakeen.co>"]
edition = "2018"

[dependencies]
sph = { path = "sph" }
sph_scene = { path = "scene" }
utils = { path = "utils" }
debug_renderer = { path = "debug_renderer" }
raytracer = { path = "raytracer" }
pipeline = { path = "pipeline" }

image = "0.23.2"

# Multithreding
rayon = "1.3.0"

# Maths
nalgebra = "0.21.0"
rand = "0.7.3"

# 3d viewer
kiss3d = "0.24.1"

serde_json = "1.0.48"
serde_yaml = "0.8.11"
serde_derive = "1.0.105"

# CLI
clap = {version = "~2.33.0", features = ["yaml"]}
indicatif = "0.14.0"
