[package]
name = "bubbler"
version = "0.1.0"
authors = ["Issaadi Sami <samiisd@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sph = { path = "../sph" }

nalgebra = "0.20.0"
rand = "0.7.3"
rayon = "1.3.0"

serde = "1.0.105"
serde_yaml = "0.8.11"
serde_derive = "1.0.105"
