[package]
name = "sph_common"
version = "0.1.0"
authors = ["Audran Doublet <audran@datakeen.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.20.0", features = ["serde-serialize"]}

# serialization
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.48"

# compression
flate2 = { version = "*", features = ["cloudflare_zlib"], default-features = false }
