[package]
name = "sph_common"
version = "0.1.0"
authors = ["Audran Doublet <audran@datakeen.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.20.0", features = ["serde-serialize"] }
rayon = "1.3.0"
tobj = "0.1.12"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_cbor = "0.11.1"
