[package]
name = "pipeline"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.20.0", features = ["serde-serialize"] }

sph_scene = { path = "../scene" }
sph = { path = "../sph" }
raytracer = { path = "../raytracer" }
mesher = { path = "../mesher" }
bubbler = { path = "../bubbler" }
search = { path = "../search" }
utils = { path = "../utils" }

rayon = "1.3.0"

indicatif = "0.14.0"
