[package]
name = "raytracer"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

[dependencies]
nalgebra = { version = "0.21.0", features = ["serde-serialize"] }

flate2 = { version = "*", features = ["cloudflare_zlib"], default-features = false }

image = "0.23.0"
rand = ""
tobj = ""
rayon = ""
serde = ""
serde_json = ""
serde_yaml = ""
serde_derive = ""
cfg-if = ""

search = { path = "../search" }
image_manipulation = { path = "../image_manipulation" }
