[package]
name = "sph_scene"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sph_common = { path = "../common" }
nalgebra = "0.20.0"
serde = "1.0.105"
serde_yaml = "0.8.11"
serde_derive = "1.0.105"
