[package]
name = "sph_scene"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sph = { path = "../sph" }
utils = { path = "../utils" }

nalgebra = "0.20.0"
serde = {version = "1.0.105"}
serde_json = "1.0.48"
serde_yaml = "0.8.11"
serde_derive = "1.0.105"
image = "0.23.2"
