[package]
name = "search"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra = { version = "0.21.0", features = ["serde-serialize"] }

rayon = "1.3.0"
dashmap = "3.10.0"
