[package]
name = "sph"
version = "0.1.0"
authors = ["Audran Doublet <audran@datakeen.co>"]
edition = "2018"

[dependencies]
# Maths
nalgebra = { version = "0.20.0", features = ["serde-serialize"] }
rand = "*"

# Multithreading
rayon = "1.3.0"

# serialization
serde = {version = "1.0.105", features = ["derive"]}
serde_derive = "1.0.105"

search = { path = "../search" }
mesher = { path = "../mesher" }
utils = { path = "../utils" }
