[package]
name = "sph"
version = "0.1.0"
authors = ["Audran Doublet <audran@datakeen.co>"]
edition = "2018"

[dependencies]
# Maths
nalgebra = { version = "0.21.0", features = ["serde-serialize"] }
rand = "*"

# compression
flate2 = { version = "*", features = ["cloudflare_zlib"], default-features = false }

# Multithreading
rayon = "1.3.0"

# serialization
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.48"
serde_derive = "1.0.105"

search = { path = "../search" }
mesher = { path = "../mesher" }
utils = { path = "../utils" }
