[package]
name = "utils"
version = "0.1.0"
authors = ["Audran Doublet <audran.doublet@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra = { version = "0.20.0", features = ["serde-serialize"] }

rayon = "1.3.0"

serde = {version = "1.0.105", features = ["derive"]}
serde_derive = "1.0.105"
serde_cbor = "0.11.1"
